--- a/src/sql.properties
+++ b/src/sql.properties
@@ -2,5 +2,7 @@ cliente.login=SELECT * FROM cliente WHERE contrasena=md5(?) AND dni=?
 cliente.insert=INSERT INTO cliente(dni, nombre, apellidos, fecha_nacimiento, sexo, direccion, telefono, contrasena) values(?, ?, ?, to_date(?, 'DD/MM/YYYY'), ?, ?, ?, md5(?))
 cliente.update=UPDATE cliente SET nombre=?, apellidos=?, fecha_nacimiento=?, sexo=?, direccion=to_date(?, DD/MM/YYYY'), telefono=? WHERE dni=?
 account.getaccounts=SELECT iban, saldo FROM cuenta_corriente WHERE cliente=?
+account.getaccount=SELECT saldo FROM cuenta_corriente WHERE iban=? AND cliente=?
 account.insert=INSERT INTO cuenta_corriente(iban, saldo, cliente) values(?, ?, ?)
 account.delete=DELETE FROM cuenta_corriente WHERE iban=? AND cliente=?
+transactions.newtransaction=INSERT INTO movimientos(FECHA, CANTIDAD, ORIGEN, DESTINO) VALUES(now(), ?, ?, ?);
