--- a/src/sql.properties
+++ b/src/sql.properties
@@ -5,5 +5,5 @@ account.getaccounts=SELECT iban, saldo FROM cuenta_corriente WHERE cliente=?
 account.getaccount=SELECT saldo FROM cuenta_corriente WHERE iban=? AND cliente=?
 account.insert=INSERT INTO cuenta_corriente(iban, saldo, cliente) values(?, ?, ?)
 account.delete=DELETE FROM cuenta_corriente WHERE iban=? AND cliente=?
-transaction.newtransaction=INSERT INTO movimientos(FECHA, CANTIDAD, ORIGEN, DESTINO) VALUES(now(), ?, ?, ?);
+transaction.newtransaction=INSERT INTO movimientos(FECHA, CANTIDAD, ORIGEN, DESTINO) VALUES(now(), ?, ?, ?)
 transaction.gettransactionsbyiban=SELECT * FROM movimientos WHERE origen=? OR destino=?
