--- a/src/sql.properties
+++ b/src/sql.properties
@@ -2,9 +2,10 @@ cliente.login=SELECT * FROM cliente WHERE contrasena=md5(?) AND dni=?
 cliente.insert=INSERT INTO cliente(dni, nombre, apellidos, fecha_nacimiento, sexo, direccion, telefono, contrasena) values(?, ?, ?, to_date(?, 'DD/MM/YYYY'), ?, ?, ?, md5(?))
 cliente.update=UPDATE cliente SET nombre=?, apellidos=?, fecha_nacimiento=?, sexo=?, direccion=to_date(?, DD/MM/YYYY'), telefono=? WHERE dni=?
 account.getaccounts=SELECT iban, saldo FROM cuenta_corriente WHERE cliente=?
-account.getaccount=SELECT * FROM cuenta_corriente WHERE iban=? AND cliente=?
+account.getoriginaccount=SELECT * FROM cuenta_corriente WHERE iban=? AND cliente=?
+account.getaccount=SELECT * FROM cuenta_corriente WHERE iban=?
 account.insert=INSERT INTO cuenta_corriente(iban, saldo, cliente) values(?, ?, ?)
-account.update=UPDATE cuenta_corriente SET saldo=? WHERE iban=? AND cliente=?
+account.update=UPDATE cuenta_corriente SET saldo=? WHERE iban=?
 account.delete=DELETE FROM cuenta_corriente WHERE iban=? AND cliente=?
 transaction.newtransaction=INSERT INTO movimientos(FECHA, CANTIDAD, ORIGEN, DESTINO) VALUES(now(), ?, ?, ?)
 transaction.gettransactionsbyiban=SELECT * FROM movimientos WHERE origen=? OR destino=?
