--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
   		<groupId>org.postgresql</groupId>
   		<artifactId>postgresql</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.code.gson</groupId>
+  		<artifactId>gson</artifactId>
+  	</dependency>
   </dependencies>
   <dependencyManagement>
   	<dependencies>
@@ -71,6 +75,11 @@
   			<groupId>org.postgresql</groupId>
   			<artifactId>postgresql</artifactId>
   			<version>42.1.4</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>com.google.code.gson</groupId>
+  			<artifactId>gson</artifactId>
+  			<version>2.8.2</version>
   		</dependency>
   	</dependencies>
   </dependencyManagement>
