--- a/src/sql.properties
+++ b/src/sql.properties
@@ -1,6 +1,6 @@
 cliente.login=SELECT * FROM cliente WHERE contrasena=md5(?) AND dni=?
 cliente.insert=INSERT INTO cliente(dni, nombre, apellidos, fecha_nacimiento, sexo, direccion, telefono, contrasena) values(?, ?, ?, to_date(?, 'DD/MM/YYYY'), ?, ?, ?, md5(?))
-cliente.update=UPDATE cliente SET nombre=?, apellidos=?, fecha_nacimiento=?, sexo=?, direccion=to_date(?, DD/MM/YYYY'), telefono=? WHERE dni=?
+cliente.update=UPDATE cliente SET nombre=?, apellidos=?, fecha_nacimiento=to_date(?, 'DD/MM/YYYY'), sexo=?, direccion=?, telefono=? WHERE dni=?
 account.getaccounts=SELECT iban, saldo FROM cuenta_corriente WHERE cliente=?
 account.getoriginaccount=SELECT * FROM cuenta_corriente WHERE iban=? AND cliente=?
 account.getaccount=SELECT * FROM cuenta_corriente WHERE iban=?
